using dapper for filter

--- a/Excercise/Pages/Index.cshtml
+++ b/Excercise/Pages/Index.cshtml
@@ -1,15 +1,22 @@
 ﻿@page
 @model IndexModel
+@inject IAntiforgery antiforgery
+
 @{
     ViewData["Title"] = "Home page";
 
     var i = 0;
+
+    //var token = antiforgery.GetAndStoreTokens(HttpContext).RequestToken;
+
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+<input type="text" name="snumber" id="snumber" />
+<a href="#" type="button" class="btn btn-info m-2 p-2" id="filterBtn">فیلتر دیتا</a>
 @if (Model._Model != null)
 {
     <div class="container">
@@ -17,7 +24,15 @@
             <div class="col-12 text-right">
 
                 <a href="/Index?handler=Delete" class="btn btn-danger m-2 p-2">پاک کردن همه دیتا</a>
-                
+
+
+
+
+
+
+
+
+
                 <table class="table table-bordered">
                     <thead>
                         <tr>
@@ -52,8 +67,33 @@
                 </table>
             </div>
         </div>
-        </div>
- 
+    </div>
+
 }
 
+@*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
+<script>
+    $(document).on("click", "#filterBtn", function (e) {
+        e.preventDefault();
+        var serialnum = document.getElementById("snumber").value;
+        debugger;
+        jQuery.ajax({
+            cache: false,
+            type: "POST",
+            url: "/Index?handler=Report",
+            dataType: "json",
+            headers:
+            {
+                "RequestVerificationToken": $('input:hidden[name="__RequestVerificationToken"]').val()
+            },
+            data: { "serial": serialnum },
+            success: function (reult) {
+                debugger;
+                console.log(reult);
+            }
+        });
+        debugger;
+    });
+
+</script>*@
