--- a/Excercise/Pages/_ViewImports.cshtml
+++ b/Excercise/Pages/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 @using Excercise
+@using Microsoft.AspNetCore.Antiforgery
 @namespace Excercise.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
