change entity query

--- a/Excercise/Pages/_ViewImports.cshtml
+++ b/Excercise/Pages/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 @using Excercise
 @using Microsoft.AspNetCore.Antiforgery
+@using Application.Dtos
 @namespace Excercise.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
