--- a/Excercise/Pages/Shared/_ReportPartial.cshtml
+++ b/Excercise/Pages/Shared/_ReportPartial.cshtml
@@ -1,9 +1,12 @@
-﻿@model List<int>
+﻿@model List<GetDeviceInfoDto>
 <p>
     <ul>
         @foreach (var item in Model)
         {
-            <li style="display:inline-table">@item</li>
+
+        <li style="display:inline-table">Device: @item.DeviceId ===> FirstDate: @item.FirstDate ===> LastDate: @item.LastDate ===> EventId: @item.EventId ===> MachinId: @item.MachinId ===> RefId: @item.RefId</li>
+            <hr />
+
         }
     </ul>
 
