--- a/Excercise/Pages/Shared/_ReportPartial.cshtml
+++ b/Excercise/Pages/Shared/_ReportPartial.cshtml
@@ -4,7 +4,7 @@
         @foreach (var item in Model)
         {
 
-        <li style="display:inline-table">Device: @item.DeviceId ===> FirstDate: @item.FirstDate ===> LastDate: @item.LastDate ===> EventId: @item.EventId ===> MachinId: @item.MachinId ===> RefId: @item.RefId</li>
+        <li style="display:inline-table">Device: @item.DeviceId ===> FirstDate: @item.FirstDate ===> LastDate: @item.LastDate ===> EventId: @item.IdEvent ===> MachinId: @item.IdMachine ===> RefId: @item.RefId</li>
             <hr />
 
         }
